load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:config.bzl", "CTF_DOMAIN")

go_image(
    name = "image",
    args = [
        "-ctf_domain",
        CTF_DOMAIN,
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/adamyi/CTFProxy/infra/dns",
    visibility = ["//visibility:private"],
    deps = ["@com_github_miekg_dns//:go_default_library"],
)

go_binary(
    name = "dns",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
