load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:config.bzl", "CTF_DOMAIN")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

go_image(
    name = "image",
    args = [
        "-dbtype",
        "mysql",
        # FIXME: configure dbaddr here
        "-jwt_public_key",
        "$(location //jwtkeys:jwtRS256.key.pub)",
    ],
    data = [
        "//jwtkeys:jwtRS256.key.pub",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "main.go",
        "template.go",
    ],
    importpath = "github.com/adamyi/CTFProxy/infra/gaia",
    visibility = ["//visibility:private"],
    x_defs = {
        "ctf_domain": CTF_DOMAIN,
    },
    deps = [
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_binary(
    name = "gaia",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
